@@ -1,33 +1,67 @@
-# JavaFX Library Management Application
+# **JavaFX Library Management Application**  
 
-This project is a JavaFX-based application designed to manage a library system. It demonstrates key JavaFX concepts such as stages, scenes, and data handling, while integrating other technologies like Maven, MySQL, and CSS for an enhanced user experience.
+This project is a **JavaFX-based** application designed to manage a library system. It showcases essential JavaFX concepts such as **stages, scenes, and data handling**, while integrating **Maven, MySQL, and CSS** for a richer user experience.  
 
-## Overview
+## **Overview**  
 
-This project serves as an example of how to build a desktop application using JavaFX. It covers creating user interfaces, handling user interactions, and managing data persistence through a MySQL database.
+This application demonstrates how to build a **desktop-based** library management system using JavaFX. It includes:
 
-## Example Application: Library Management System
+- **User interface development** with JavaFX and Scene Builder  
+- **User interaction handling**  
+- **Data persistence** via a **MySQL database**  
 
-This example application provides a simple system to administrate a library.
+## **Features**  
 
-### Features
+- **User Accounts** – Create and manage user profiles  
+- **Book Management** – Store, search, and manage books in a MySQL database  
+- **User Roles** – Define different access levels, including administrator privileges  
+- **Multi-Stage Workflow** – Separate windows for login, book management, and user administration  
 
-- **User Accounts**: Create and manage user accounts with different profiles.
-- **Book Management**: Store, search, and manage books in a MySQL database.
-- **User Roles**: Different user profiles, including administrator privileges.
-- **Multi-Stage Workflow**: Separate stages to handle login, book management, and user administration.
+## **Technical Aspects**  
 
-## Technical Aspects
+- **JavaFX** – Core framework for UI development  
+- **Maven** – Dependency and build management  
+- **Scene Builder** – GUI designing tool (FXML generation)  
+- **CSS Styling** – Enhances UI appearance  
+- **MySQL Database** – Uses `java.sql` for database connectivity and CRUD operations  
+- **Stage Communication** – Implements a **gateway pattern** for inter-stage communication  
 
-- **JavaFX Application**: Core framework for UI development.
-- **Maven**: Handles project dependencies and build management.
-- **Scene Builder**: Used to visually design the UI and generate FXML files.
-- **CSS Integration**: Applies custom styling to enhance the application's appearance.
-- **MySQL Database**: Utilizes `java.sql` package for database connectivity and CRUD operations.
-- **Stage Communication**: Implements a gateway pattern to pass information between different stages.
+---
 
-## References
+## **How to Use?**  
 
-- [Maven Documentation](https://maven.apache.org/)
-- [Scene Builder](https://gluonhq.com/products/scene-builder/)
-- [MySQL Connector for Java](https://dev.mysql.com/downloads/connector/j/)
+### **1️⃣ Build the Project**  
+
+Run the following command to build the project using **Maven**:  
+
+```sh
+mvn clean install
+```
+
+### **2️⃣ Run the Application**  
+
+To execute the JAR file, use the following command:  
+
+```sh
+java --module-path "javafx-sdk-<version>/lib" \
+     --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.web \
+     --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED \
+     --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED \
+     -jar target/Library-<version>.jar
+```
+
+`javafx-sdk-<version>` can be downloaded from the project [Gluon](https://gluonhq.com/products/javafx/).
+
+**Note**:  
+
+- Replace `<version>` with the actual **JavaFX SDK** and **Library version** you are using.  
+- Ensure that the **JavaFX SDK** is properly installed and the module path is correctly set.  
+
+---
+
+## **References**  
+
+- 📌 [Maven Documentation](https://maven.apache.org/)  
+- 📌 [Scene Builder](https://gluonhq.com/products/scene-builder/)  
+- 📌 [MySQL Connector for Java](https://dev.mysql.com/downloads/connector/j/)  
+
